# artistmanager00

./: .env.test  .gitignore  .pre-commit-config.yaml  DEPLOY.md  LICENSE  README.md  artist_manager.service  bot_persistence  bot_persistence.bak.1739132402  deploy.py  deploy_prod.py  requirements-dev.txt  requirements.txt  setup.py  setup_production.sh  vercel.json
api/: vercel.py
artist_manager_agent/: __init__.py  __main__.py  agent.py  ai_handler.py  auto_mode.py  blockchain.py  bot.py  bot_base.py  bot_commands.py  bot_goals.py  bot_main.py  config.py  dashboard.py  goal_handlers.py  handler_registry.py  handlers.py  integrations.py  log.py  main.py  models.py  music_services.py  onboarding.py  payment_manager.py  persistence.py  project_manager.py  task_handlers.py  task_manager.py  task_manager_integration.py  team_management.py  team_manager.py  utils.py
artist_manager_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: bot_data.pickle  persistence.pickle
python/artist-manager-agent/: README.md  main.py  pyproject.toml  requirements.txt
python/artist-manager-agent/artist_manager_agent/: agent.py  bot_commands.py  health_tracking.py  integrations.py  mastering.py  music_services.py  onboarding.py  release_planning.py  schedule.py  social_media.py  team_management.py
python/artist-manager-agent/examples/: basic_usage.py  bot_usage_example.py  full_integration_example.py
python/artist-manager-agent/tests/: test_imports.py
tests/: conftest.py  test_blockchain.py  test_blockchain_e2e.py  test_bot_integration.py  test_e2e.py  (+9 more)
(+85 files in other folders)
